exports[`scanUrl > #invalid // Copied from https://github.com/facebook/regener... 1`] = `
## Input
    1 | // Copied from https://github.com/facebook/regenerator/blob/main/packages/runtime/runtime.js#L736=

## Output
  > (1)

    > 1 | // Copied from https://github.com/facebook/regenerator/blob/main/packages/runtime/runtime.js#L736=
        |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
`;

exports[`scanUrl > #invalid API docs at http://example.com/docs 1`] = `
## Input
    1 | API docs at http://example.com/docs

## Output
  > (1)

    > 1 | API docs at http://example.com/docs
        |             ^^^^^^^^^^^^^^^^^^^^^^^
`;

exports[`scanUrl > #invalid API endpoint: https://api.example.com:8080/v1/user... 1`] = `
## Input
    1 | API endpoint: https://api.example.com:8080/v1/users

## Output
  > (1)

    > 1 | API endpoint: https://api.example.com:8080/v1/users
        |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
`;

exports[`scanUrl > #invalid Check [the docs](https://docs.example.com/api) for... 1`] = `
## Input
    1 | Check [the docs](https://docs.example.com/api) for usage.

## Output
  > (1)

    > 1 | Check [the docs](https://docs.example.com/api) for usage.
        |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
`;

exports[`scanUrl > #invalid Click https://a.com/test! now. 1`] = `
## Input
    1 | Click https://a.com/test! now.

## Output
  > (1)

    > 1 | Click https://a.com/test! now.
        |       ^^^^^^^^^^^^^^^^^^
`;

exports[`scanUrl > #invalid Contact at <https://example.com/contact> 1`] = `
## Input
    1 | Contact at <https://example.com/contact>

## Output
  > (1)

    > 1 | Contact at <https://example.com/contact>
        |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^
`;

exports[`scanUrl > #invalid Dashboard: http://admin:secret@example.com/panel 1`] = `
## Input
    1 | Dashboard: http://admin:secret@example.com/panel

## Output
  > (1)

    > 1 | Dashboard: http://admin:secret@example.com/panel
        |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
`;

exports[`scanUrl > #invalid Dev server at http://localhost:3000/dashboard 1`] = `
## Input
    1 | Dev server at http://localhost:3000/dashboard

## Output
  > (1)

    > 1 | Dev server at http://localhost:3000/dashboard
        |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
`;

exports[`scanUrl > #invalid Docs [https://a.com/test] here. 1`] = `
## Input
    1 | Docs [https://a.com/test] here.

## Output
  > (1)

    > 1 | Docs [https://a.com/test] here.
        |       ^^^^^^^^^^^^^^^^^^
`;

exports[`scanUrl > #invalid First: https://example.com/page1\\nSecond: https://... 1`] = `
## Input
    1 | First: https://example.com/page1
    2 | Second: https://example.com/page2
    3 | Third: https://example.com/page3

## Output
  > (1)

    > 1 | First: https://example.com/page1
        |        ^^^^^^^^^^^^^^^^^^^^^^^^^
      2 | Second: https://example.com/page2
      3 | Third: https://example.com/page3

  > (2)

      1 | First: https://example.com/page1
    > 2 | Second: https://example.com/page2
        |         ^^^^^^^^^^^^^^^^^^^^^^^^^
      3 | Third: https://example.com/page3

  > (3)

      1 | First: https://example.com/page1
      2 | Second: https://example.com/page2
    > 3 | Third: https://example.com/page3
        |        ^^^^^^^^^^^^^^^^^^^^^^^^^
`;

exports[`scanUrl > #invalid Found at https://a.com/test, see also. 1`] = `
## Input
    1 | Found at https://a.com/test, see also.

## Output
  > (1)

    > 1 | Found at https://a.com/test, see also.
        |          ^^^^^^^^^^^^^^^^^^
`;

exports[`scanUrl > #invalid Hello\\nGo to http://example.com/%E4%BD%A0%E5%A5%BD... 1`] = `
## Input
    1 | Hello
    2 | Go to http://example.com/%E4%BD%A0%E5%A5%BD for more info

## Output
  > (1)

      1 | Hello
    > 2 | Go to http://example.com/%E4%BD%A0%E5%A5%BD for more info
        |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
`;

exports[`scanUrl > #invalid Hello\\nGo to http://example.com/?a=b?? for more in... 1`] = `
## Input
    1 | Hello
    2 | Go to http://example.com/?a=b?? for more info

## Output
  > (1)

      1 | Hello
    > 2 | Go to http://example.com/?a=b?? for more info
        |       ^^^^^^^^^^^^^^^^^^^^^^^
`;

exports[`scanUrl > #invalid Hello\\nGo to http://example.com/你好 for more info 1`] = `
## Input
    1 | Hello
    2 | Go to http://example.com/你好 for more info

## Output
  > (1)

      1 | Hello
    > 2 | Go to http://example.com/你好 for more info
        |       ^^^^^^^^^^^^^^^^^^^^^
`;

exports[`scanUrl > #invalid Homepage is https://example.com/ — bookmark it. 1`] = `
## Input
    1 | Homepage is https://example.com/ — bookmark it.

## Output
  > (1)

    > 1 | Homepage is https://example.com/ — bookmark it.
        |             ^^^^^^^^^^^^^^^^^^^^
`;

exports[`scanUrl > #invalid Internal API: http://192.168.1.100:8080/api/v2 1`] = `
## Input
    1 | Internal API: http://192.168.1.100:8080/api/v2

## Output
  > (1)

    > 1 | Internal API: http://192.168.1.100:8080/api/v2
        |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
`;

exports[`scanUrl > #invalid Is it https://a.com/test? yes. 1`] = `
## Input
    1 | Is it https://a.com/test? yes.

## Output
  > (1)

    > 1 | Is it https://a.com/test? yes.
        |       ^^^^^^^^^^^^^^^^^^
`;

exports[`scanUrl > #invalid Read https://example.com/docs#installation for set... 1`] = `
## Input
    1 | Read https://example.com/docs#installation for setup.

## Output
  > (1)

    > 1 | Read https://example.com/docs#installation for setup.
        |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
`;

exports[`scanUrl > #invalid See (https://a.com/test) for details. 1`] = `
## Input
    1 | See (https://a.com/test) for details.

## Output
  > (1)

    > 1 | See (https://a.com/test) for details.
        |      ^^^^^^^^^^^^^^^^^^
`;

exports[`scanUrl > #invalid See https://example.com/issue/1234 for details. 1`] = `
## Input
    1 | See https://example.com/issue/1234 for details.

## Output
  > (1)

    > 1 | See https://example.com/issue/1234 for details.
        |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
`;

exports[`scanUrl > #invalid See https://example.com/path/🎉/page for info 1`] = `
## Input
    1 | See https://example.com/path/🎉/page for info

## Output
  > (1)

    > 1 | See https://example.com/path/🎉/page for info
        |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
`;

exports[`scanUrl > #invalid Visit https://a.com/test. for more. 1`] = `
## Input
    1 | Visit https://a.com/test. for more.

## Output
  > (1)

    > 1 | Visit https://a.com/test. for more.
        |       ^^^^^^^^^^^^^^^^^^
`;

exports[`scanUrl > #invalid Visit https://example.com 1`] = `
## Input
    1 | Visit https://example.com

## Output
  > (1)

    > 1 | Visit https://example.com
        |       ^^^^^^^^^^^^^^^^^^^
`;

exports[`scanUrl > #invalid const endpoint = \"https://api.example.com/v1/data\"... 1`] = `
## Input
    1 | const endpoint = "https://api.example.com/v1/data";

## Output
  > (1)

    > 1 | const endpoint = "https://api.example.com/v1/data";
        |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
`;

exports[`scanUrl > #invalid https://a.example.com https://b.example.com https:... 1`] = `
## Input
    1 | https://a.example.com https://b.example.com https://c.example.com

## Output
  > (1)

    > 1 | https://a.example.com https://b.example.com https://c.example.com
        | ^^^^^^^^^^^^^^^^^^^^^

  > (2)

    > 1 | https://a.example.com https://b.example.com https://c.example.com
        |                       ^^^^^^^^^^^^^^^^^^^^^

  > (3)

    > 1 | https://a.example.com https://b.example.com https://c.example.com
        |                                             ^^^^^^^^^^^^^^^^^^^^^
`;

exports[`scanUrl > #invalid https://api.v2.example.com/endpoint 1`] = `
## Input
    1 | https://api.v2.example.com/endpoint

## Output
  > (1)

    > 1 | https://api.v2.example.com/endpoint
        | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
`;

exports[`scanUrl > #invalid https://example.com is the site. 1`] = `
## Input
    1 | https://example.com is the site.

## Output
  > (1)

    > 1 | https://example.com is the site.
        | ^^^^^^^^^^^^^^^^^^^
`;

exports[`scanUrl > #invalid https://example.com/a/b/c/d.html 1`] = `
## Input
    1 | https://example.com/a/b/c/d.html

## Output
  > (1)

    > 1 | https://example.com/a/b/c/d.html
        | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
`;

exports[`scanUrl > #invalid https://example.com/issue/1234 1`] = `
## Input
    1 | https://example.com/issue/1234

## Output
  > (1)

    > 1 | https://example.com/issue/1234
        | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
`;

exports[`scanUrl > #invalid https://example.com/path?key=value#section-1 1`] = `
## Input
    1 | https://example.com/path?key=value#section-1

## Output
  > (1)

    > 1 | https://example.com/path?key=value#section-1
        | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
`;

exports[`scanUrl > #invalid https://example.com/search?q=%E4%B8%AD%E6%96%87 1`] = `
## Input
    1 | https://example.com/search?q=%E4%B8%AD%E6%96%87

## Output
  > (1)

    > 1 | https://example.com/search?q=%E4%B8%AD%E6%96%87
        | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
`;

exports[`scanUrl > #invalid https://example.com/search?q=hello+world&lang=en&p... 1`] = `
## Input
    1 | https://example.com/search?q=hello+world&lang=en&page=2

## Output
  > (1)

    > 1 | https://example.com/search?q=hello+world&lang=en&page=2
        | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
`;

exports[`scanUrl > #invalid https://example.com/search?q=中文关键词 1`] = `
## Input
    1 | https://example.com/search?q=中文关键词

## Output
  > (1)

    > 1 | https://example.com/search?q=中文关键词
        | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
`;

exports[`scanUrl > #invalid https://example.com/very/long/path/to/some/resourc... 1`] = `
## Input
    1 | https://example.com/very/long/path/to/some/resource.json?format=pretty&indent=2&timestamp=1234567890#results

## Output
  > (1)

    > 1 | https://example.com/very/long/path/to/some/resource.json?format=pretty&indent=2&timestamp=1234567890#results
        | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
`;

exports[`scanUrl > #invalid https://redirect.example.com/?next=https://target.... 1`] = `
## Input
    1 | https://redirect.example.com/?next=https://target.example.com/page

## Output
  > (1)

    > 1 | https://redirect.example.com/?next=https://target.example.com/page
        | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
`;

exports[`scanUrl > #invalid redirect_url=https://example.com/callback?code=abc 1`] = `
## Input
    1 | redirect_url=https://example.com/callback?code=abc

## Output
  > (1)

    > 1 | redirect_url=https://example.com/callback?code=abc
        |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
`;

exports[`scanUrl > #invalid see https://example.com and https://example2.com 1`] = `
## Input
    1 | see https://example.com and https://example2.com

## Output
  > (1)

    > 1 | see https://example.com and https://example2.com
        |     ^^^^^^^^^^^^^^^^^^^

  > (2)

    > 1 | see https://example.com and https://example2.com
        |                             ^^^^^^^^^^^^^^^^^^^^
`;

exports[`scanUrl > #invalid see https://example.com;new line 1`] = `
## Input
    1 | see https://example.com;new line

## Output
  > (1)

    > 1 | see https://example.com;new line
        |     ^^^^^^^^^^^^^^^^^^^^^^^
`;

exports[`scanUrl > #invalid see https://example.com?foo=bar and https://exampl... 1`] = `
## Input
    1 | see https://example.com?foo=bar and https://example2.com

## Output
  > (1)

    > 1 | see https://example.com?foo=bar and https://example2.com
        |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^

  > (2)

    > 1 | see https://example.com?foo=bar and https://example2.com
        |                                     ^^^^^^^^^^^^^^^^^^^^
`;

exports[`scanUrl > #invalid see https://example.com\\nnew line 1`] = `
## Input
    1 | see https://example.com
    2 | new line

## Output
  > (1)

    > 1 | see https://example.com
        |     ^^^^^^^^^^^^^^^^^^^
      2 | new line
`;

exports[`scanUrl > #invalid see https://example.com{new line 1`] = `
## Input
    1 | see https://example.com{new line

## Output
  > (1)

    > 1 | see https://example.com{new line
        |     ^^^^^^^^^^^^^^^^^^^
`;

exports[`scanUrl > #invalid 访问 https://example.com/中文路径 获取详情 1`] = `
## Input
    1 | 访问 https://example.com/中文路径 获取详情

## Output
  > (1)

    > 1 | 访问 https://example.com/中文路径 获取详情
        |    ^^^^^^^^^^^^^^^^^^^^^^^^
`;
